chassis/tests/failing/comp_type_item.stderr
error: Associated type not allowed in component
  --> $DIR/comp_type_item.rs:18:9
   |
18 |         type Item;
   |         ^^^^^^^^^^
